<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.myportfolio.myportfolioapp.MainActivity">

    <!-- Text view of the main view -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/main_activity_title" />

    <!-- Row of app buttons -->
    <Button
        android:id="@+id/bttn_popular_movies"
        android:text="@string/popular_movies"
        style="@style/PortfolioApp.Main.Button"/>

    <Button
        android:id="@+id/bttn_stock_hawk"
        android:text="@string/stock_hawk"
        style="@style/PortfolioApp.Main.Button"/>

    <Button
        android:id="@+id/bttn_build_it_bigger"
        android:text="@string/build_it_bigger"
        style="@style/PortfolioApp.Main.Button"/>

    <Button
        android:id="@+id/bttn_make_your_app_material"
        android:text="@string/make_your_app_material"
        style="@style/PortfolioApp.Main.Button"/>

    <Button
        android:id="@+id/bttn_go_ubiquitous"
        android:text="@string/go_ubiquitous"
        style="@style/PortfolioApp.Main.Button"/>

    <Button
        android:id="@+id/bttn_capstone"
        android:text="@string/capstone"
        style="@style/PortfolioApp.Main.Button"/>

</LinearLayout>
